--- a/http/bundle/pom.xml
+++ b/http/bundle/pom.xml
@@ -56,8 +56,8 @@
                             org.cometd.bayeux;version=${cometd.version};-split-package:=merge-first,
                             org.cometd.bayeux.client;version=${cometd.version};-split-package:=merge-first,
                             org.cometd.bayeux.server;version=${cometd.version};-split-package:=merge-first,
-                            org.apache.felix.http.api;version=${http.api.version};-split-package:=merge-first,
-                            org.apache.felix.http.cometd;version=${project.version};-split-package:=merge-first,
+                            org.apache.felix.http.api;-split-package:=merge-first,
+                            org.apache.felix.http.cometd;-split-package:=merge-first,
                             org.eclipse.jetty.*;version=${version;===;${jetty.version}};-split-package:=merge-first
                         </Export-Package>
                         <Private-Package>
