--- a/http/parent/pom.xml
+++ b/http/parent/pom.xml
@@ -38,11 +38,20 @@
     </prerequisites>
 
     <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<jetty.version>9.2.6.v20141205</jetty.version>
     	<cometd.version>2.8.0</cometd.version>
     	<http.service.version>1.2.1</http.service.version>
     	<servlet.version>3.1.0</servlet.version>
+        <!--
+            Java API and class file compliance. This property supports
+            one of three values:
+              - 6: Java 6 (default)
+              - 7: Java 7 
+            Using anything else causes the set-bundle-required-execution-environment
+            to fail the build with an exception
+        -->
+        <http.java.version>6</http.java.version>
     </properties>
 
     <scm>
@@ -54,11 +63,45 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>set-bundle-required-execution-environment</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                        <configuration>
+                            <exportAntProperties>true</exportAntProperties>
+                            <target>
+                                <script language="javascript"> <![CDATA[
+                                    var System = java.lang.System;
+                                    var bree = "J2SE-1.6";
+                                    var httpJavaVersion = System.getProperty("http.java.version");
+                                    if (!httpJavaVersion) {
+                                        httpJavaVersion = project.getProperty("http.java.version");
+                                    }
+                                    if (httpJavaVersion == "7") {
+                                        bree = "JavaSE-1.7";
+	                                    System.out.println("Setting Bundle-RequiredExecutionEnvironment=" + bree + " from http.java.version=" + httpJavaVersion);
+                                    } else if (httpJavaVersion != "6") {
+                                        System.out.println("Unsupported http.java.version=" + httpJavaVersion + "; must be 6 or 7.");
+                                        throw "http.java.version must be 6 or 7";
+                                    }
+                                    project.setProperty("http.bree", bree);
+                                ]]></script>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <compilerVersion>1.7</compilerVersion>
+	                <source>1.${http.java.version}</source>
+                    <target>1.${http.java.version}</target>
+                    <compilerVersion>1.${http.java.version}</compilerVersion>
                 </configuration>
             </plugin>
         </plugins>
@@ -76,19 +119,32 @@
                           <goal>bundle</goal>
                         </goals>
                       </execution>
+                      <execution>
+                        <id>baseline</id>
+                        <goals>
+                          <goal>baseline</goal>
+                        </goals>
+                      </execution>
                     </executions>
                     <configuration>
                         <instructions>
                             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                             <Bundle-Version>${project.version}</Bundle-Version>
+                            <Bundle-RequiredExecutionEnvironment>${http.bree}</Bundle-RequiredExecutionEnvironment>
                         </instructions>                        
                     </configuration>
-                </plugin>
+                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>biz.aQute</groupId>
+            <artifactId>bndlib</artifactId>
+            <version>1.50.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
