--- a/http/bundle/pom.xml
+++ b/http/bundle/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>org.apache.felix.http.parent</artifactId>
-        <version>5-SNAPSHOT</version>
+        <version>5</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -109,22 +109,22 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.apache.felix.http.bridge</artifactId>
-            <version>[2.4.0-SNAPSHOT,2.5)</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.apache.felix.http.cometd</artifactId>
-            <version>[2.4.0-SNAPSHOT,2.5)</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.apache.felix.http.jetty</artifactId>
-            <version>[3.0.0-SNAPSHOT,3.1)</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.apache.felix.http.whiteboard</artifactId>
-            <version>[2.4.0-SNAPSHOT,2.5)</version>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
 </project>
