--- a/http/bundle/pom.xml
+++ b/http/bundle/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>org.apache.felix.http.parent</artifactId>
-        <version>5</version>
+        <version>6-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -36,6 +36,10 @@
         <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/http/bundle</developerConnection>
         <url>http://svn.apache.org/viewvc/felix/trunk/http/bundle/</url>
     </scm>
+
+    <properties>
+        <http.java.version>7</http.java.version>
+    </properties>
 
     <build>
         <plugins>
@@ -119,7 +123,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.apache.felix.http.jetty</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
